# ccss

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ccss.spec  pyproject.toml
.claude/commands/: invoke-skills.md
.claude/skills/agent-tui-expert/: SKILL.md
.claude/skills/claude-agent-sdk/: SKILL.md
.claude/skills/claude-skill-creator/: SKILL.md
.claude/skills/python-data-engineering/: SKILL.md  when-to-build-vs-buy.md
.claude/skills/python-data-engineering/integration/: field-mapping.md  incremental-sync.md  schema-resilience.md  uv-package-management.md
.claude/skills/python-data-engineering/pydantic/: settings-management.md
.claude/skills/python-data-engineering/sqlalchemy/: factory-patterns.md  type-decorators.md
.github/workflows/: release.yml
docs/: performance-research.md
openspec/changes/add-session-search/: proposal.md  tasks.md
openspec/changes/add-theme-pilot-tests/: proposal.md  tasks.md
openspec/changes/archive/2025-12-05-add-rolling-logger/: design.md  (+2 more)
openspec/changes/enhance-ux-polish/: design.md  proposal.md  tasks.md
openspec/changes/enrich-session-metadata/: design.md  proposal.md  tasks.md
openspec/changes/fix-keyboard-ui/: design.md  proposal.md  tasks.md
openspec/specs/logging/: spec.md
scripts/: build_standalone.sh  clean.sh  console_logs.sh  dev.sh
src/ccss/: __init__.py  __main__.py  app.py  cli.py  demo.py  dev.py  indexer.py  logger.py  search.py  settings.py  themes.py
src/ccss/scripts/: __init__.py  build.py
tests/: test_app_interactions.py  test_fts5_syntax.py  test_indexer.py  test_search.py
(+7 files in other folders)
